[project]
name = "blackjack-strategy-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "Jinja2",
]

[project.scripts]
blackjack = "blackjack_strategy_simulation.main:main"

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
