[project]
name = "blackjack"
version = "0.1.0"
description = "Generating blackjack basic strategy charts via simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "Jinja2",
]

[project.scripts]
blackjack = "blackjack.__main__:main"

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
